Way too much stuff done, should have commited in chunks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,5 @@
  *= require bootstrap/bootstrap
  *= require bootstrap/bootstrap-theme
  */
+
+.nav, .pagination, .carousel a { cursor: pointer; }
